Reimplemented database stuff
git-svn-id: https://forja.rediris.es/svn/cusl6-swadroid/trunk@62 5bc14d19-1e4b-4ba2-aa50-860af135f48c